videos OK, export to .dat OK

--- a/epidemics.ipynb
+++ b/epidemics.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,26 +39,39 @@
     "import matplotlib\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact\n",
+    "from IPython.display import clear_output\n",
+    "from matplotlib.animation import FFMpegWriter\n",
     "%matplotlib inline\n",
     "\n",
     "# global probabilities of infection, dying and being cured\n",
     "p_infect = 0.7 # <- change this\n",
     "p_die = 0.005  # <- change this\n",
-    "p_cure = 0.01  # <- change this\n",
+    "p_cure = 0.02  # <- change this\n",
     "\n",
     "# limits of the simulation box and population size\n",
     "l = 2 # <- change this\n",
     "xi, xf = -l, l\n",
     "yi, yf = -l, l\n",
-    "n = 200 # <- change this\n",
+    "n = 100 # <- change this\n",
     "\n",
     "# number of steps in dynamics, stepsize and interaction radius\n",
-    "maxiter = 300 # <- change this\n",
-    "dt = 0.1 # <- change this\n",
-    "eps = 0.15 # <- change this\n",
+    "maxiter = 400 # <- change this\n",
+    "dt = 0.1\n",
+    "eps = 0.1\n",
     "\n",
     "# mobility parameter, it is a measure of social interaction\n",
-    "v0 = 0.5 # <- change this"
+    "v0 = 0.5 # <- change this\n",
+    "\n",
+    "# filename to be used for both data text and movie files creation\n",
+    "file = 'scenario_A'\n",
+    "\n",
+    "def progress_bar(pos, maxpos):\n",
+    "    ''' Função imprime uma barra de progresso na tela, de tamanho máximo maxpos e posição atual pos '''\n",
+    "    print('{:6.2f} % [{:100s}] {:3d}/{:3d}'.format(100 * (pos + 1) / maxpos,\n",
+    "                                                int(100 * (pos + 1) / maxpos) * '#', \n",
+    "                                                pos + 1,\n",
+    "                                                maxpos))\n",
+    "    clear_output(wait=True)"
    ]
   },
   {
@@ -143,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.00 % [####################################################################################################] 399/399\n"
+     ]
+    }
+   ],
    "source": [
-    "# here I run the dynamics\n",
+    "# first, summarise the number of healty, sick, cured and dead people for each timestep\n",
+    "nh = np.zeros(maxiter, dtype=int) # healty\n",
+    "ns = np.zeros(maxiter, dtype=int) # sick\n",
+    "nc = np.zeros(maxiter, dtype=int) # cured\n",
+    "nd = np.zeros(maxiter, dtype=int) # dead\n",
+    "\n",
+    "# then run the dynamics  \n",
     "for i in range(maxiter - 1):\n",
+    "    progress_bar(i, maxiter - 1)\n",
     "    # speed update. There are some distinct situations here\n",
     "    for j, p in enumerate(pop):\n",
     "        # first check if the person is still alive\n",
@@ -230,39 +258,88 @@
     "        # ... or recover\n",
     "        elif p.sick(i) and (w >= p_die) and (w < p_cure + p_die):\n",
     "            p.health[i:] = 3\n",
-    "    "
+    "        \n",
+    "        # update the total numbers\n",
+    "        if p.healty(i):\n",
+    "            nh[i] += 1\n",
+    "        elif p.sick(i):\n",
+    "            ns[i] += 1\n",
+    "        elif p.cured(i):\n",
+    "            nc[i] += 1\n",
+    "        elif p.dead(i):\n",
+    "            nd[i] += 1\n",
+    "\n",
+    "# and update the numbers for final step \n",
+    "for p in pop:\n",
+    "    if p.healty(maxiter - 1):\n",
+    "        nh[maxiter - 1] += 1\n",
+    "    elif p.sick(maxiter - 1):\n",
+    "        ns[maxiter - 1] += 1\n",
+    "    elif p.cured(maxiter - 1):\n",
+    "        nc[maxiter - 1] += 1\n",
+    "    elif p.dead(maxiter - 1):\n",
+    "        nd[maxiter - 1] += 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Checking results 1 - read records\n",
+    "## Checking results 1 - write records to file\n",
     "\n",
-    "We can check all records and see who and when got sick, recovered or died."
+    "We can check all records by writing them down to a text file, and see who and when got sick, recovered or died."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "# this cell is one way of checking results for each person and each timestep\n",
-    "dict_h = {0 : 'hlty', 1 : 'sick', 3 : 'curd', 4 : 'dead'}\n",
+    "dict_h = {0 : 'h', 1 : 's', 3 : 'c', 4 : 'd'}\n",
     "\n",
-    "@interact(k=(0, maxiter - 10, 10), j=(0, n - 1))\n",
-    "def show_results(k, j):\n",
-    "    print('person[{:3d}]'.format(j))\n",
-    "    for i in range(k, k + 10):\n",
-    "        print('Step # {:4d} [{:2s}]: {:6.3f}, {:6.3f}, {:6.3f}, {:6.3f}'.format(i, \n",
-    "                                                                         dict_h[pop[j].health[i]], \n",
-    "                                                                         pop[j].x[i], \n",
-    "                                                                         pop[j].y[i], \n",
-    "                                                                         pop[j].vx[i], \n",
-    "                                                                         pop[j].vy[i]))"
+    "#file into which save the results\n",
+    "datafile = file + '.dat'\n",
+    "with open(datafile, 'w') as f:\n",
+    "    # first the header with the following info: p_infect p_die p_cure l n maxiter dt eps v0\n",
+    "    f.write('{:5.3f} {:5.3f} {:5.3f} {:3d} {:4d} {:4d} {:4.2f} {:4.2f} {:4.2f}\\n'.format(p_infect,\n",
+    "                                                                                              p_die,\n",
+    "                                                                                              p_cure,\n",
+    "                                                                                              l,\n",
+    "                                                                                              n,\n",
+    "                                                                                              maxiter,\n",
+    "                                                                                              dt,\n",
+    "                                                                                              eps,\n",
+    "                                                                                              v0))\n",
+    "    # then for each person in population,\n",
+    "    for i, p in enumerate(pop):\n",
+    "        # their number\n",
+    "        f.write('{:3d}\\n'.format(i))\n",
+    "        t = ''\n",
+    "        # their x history\n",
+    "        for j in p.x:\n",
+    "            t += '{:6.3f} '.format(j)\n",
+    "        t += '\\n'\n",
+    "        # their y history\n",
+    "        for j in p.y:\n",
+    "            t += '{:6.3f} '.format(j)\n",
+    "        t += '\\n'\n",
+    "        # their vx history\n",
+    "        for j in p.vx:\n",
+    "            t += '{:6.3f} '.format(j)\n",
+    "        t += '\\n'\n",
+    "        # their vy history\n",
+    "        for j in p.vy:\n",
+    "            t += '{:6.3f} '.format(j)\n",
+    "        t += '\\n'\n",
+    "        # their health history\n",
+    "        for j in p.health:\n",
+    "            t += '{:1s} '.format(dict_h[j])\n",
+    "        t += '\\n'\n",
+    "        f.write(t)"
    ]
   },
   {
@@ -276,42 +353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# here I summarise the number of healty, sick, cured and dead people for each timestep\n",
-    "nh = np.zeros(maxiter, dtype=int) # healty\n",
-    "ns = np.zeros(maxiter, dtype=int) # sick\n",
-    "nc = np.zeros(maxiter, dtype=int) # cured\n",
-    "nd = np.zeros(maxiter, dtype=int) # dead\n",
-    "\n",
-    "for i in range(maxiter):\n",
-    "    for p in pop:\n",
-    "        if p.healty(i):\n",
-    "            nh[i] += 1\n",
-    "        elif p.sick(i):\n",
-    "            ns[i] += 1\n",
-    "        elif p.cured(i):\n",
-    "            nc[i] += 1\n",
-    "        elif p.dead(i):\n",
-    "            nd[i] += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20a44458adff48ccbd57506763576bd7",
+       "model_id": "bdcb2cb83b6242cc9ca775151290c53a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=149, description='i', max=299), Output()), _dom_classes=('widget-interac…"
+       "interactive(children=(IntSlider(value=199, description='i', max=399), Output()), _dom_classes=('widget-interac…"
       ]
      },
      "metadata": {},
@@ -362,8 +415,78 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 60.25 % [############################################################                                        ] 241/400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create movie \n",
+    "# you should have ffmpeg installed\n",
+    "# I just downloaded the binaries and copied ffmpeg.exe to this project folder\n",
+    "\n",
+    "moviefile = file + '.mp4'\n",
+    "metadata = dict(title='Movie Test', artist='Matplotlib',\n",
+    "                comment='Movie support!')\n",
+    "\n",
+    "writer = FFMpegWriter(fps=12, metadata=metadata)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(30,15), ncols=2, nrows=1)\n",
+    "\n",
+    "# use writer to write frames to movie file\n",
+    "with writer.saving(fig, moviefile, 100):\n",
+    "    for i in range(maxiter):\n",
+    "        for p in pop:\n",
+    "            # but not if the person is dead\n",
+    "            if (not p.dead(i)):\n",
+    "                ax[0].scatter(p.x[i], p.y[i], color=color_dict[p.health[i]], s=100)\n",
+    "        ax[0].set_title('step # {:3d}'.format(i), fontsize=32)\n",
+    "        ax[0].set_xlim(xi, xf)\n",
+    "        ax[0].set_ylim(yi, yf)\n",
+    "        # clean up axis for better visualisation\n",
+    "        ax[0].tick_params(axis='both',\n",
+    "                    which='both',\n",
+    "                    bottom=False,\n",
+    "                    top=False,\n",
+    "                    left=False,\n",
+    "                    right=False,\n",
+    "                    labelbottom=False,\n",
+    "                    labelleft=False)\n",
+    "        ax[0].text(xi + 0.05 * l, yf - 0.05 * l, r'$P_i = ' + '{:5.1f}\\%'.format(p_infect * 100) + '$\\n' + \\\n",
+    "                   r'$P_c = ' + '{:5.1f}\\%'.format(p_cure * 100) + '$\\n' + \\\n",
+    "                   r'$P_d = ' + '{:5.1f}\\%'.format(p_die * 100) + '$\\n' + \\\n",
+    "                   r'$N = ' + '{:4d}'.format(n) + '$\\n' + \\\n",
+    "                   r'$R_i = ' + '{:4.2f}'.format(eps) + '$\\n' + \\\n",
+    "                   r'$v_0 = ' + '{:3.1f}'.format(v0) + '$', \n",
+    "                   fontsize=28,\n",
+    "                    verticalalignment='top',\n",
+    "                  bbox=dict(facecolor='blue', alpha=0.2))        \n",
+    "        \n",
+    "        # the second plot shows how these numbers evolve in time\n",
+    "        ax[1].plot(np.arange(i), nh[:i], lw=4, color='blue', label='{:3d} healty'.format(nh[i]))\n",
+    "        ax[1].plot(np.arange(i), ns[:i], lw=4, color='red', label='{:3d} sick'.format(ns[i]))\n",
+    "        ax[1].plot(np.arange(i), nc[:i], lw=4, color='orange', label='{:3d} cured'.format(nc[i]))\n",
+    "        ax[1].plot(np.arange(i), nd[:i], lw=4, color='black', label='{:3d} dead'.format(nd[i]))\n",
+    "        ax[1].set_xlim(0, maxiter - 1)\n",
+    "        ax[1].set_ylim(0, n)\n",
+    "        ax[1].set_xlabel('steps', fontsize=32)\n",
+    "        ax[1].set_ylabel('# of people', fontsize=32)\n",
+    "        ax[1].legend(loc='upper right', fontsize=32)\n",
+    "        ax[1].tick_params(axis='both',\n",
+    "                which='both',\n",
+    "                labelsize=32)\n",
+    "        plt.tight_layout()\n",
+    "        \n",
+    "        writer.grab_frame()\n",
+    "        # clear axis for next frame\n",
+    "        ax[0].cla()\n",
+    "        ax[1].cla()\n",
+    "        progress_bar(i, maxiter)"
+   ]
   }
  ],
  "metadata": {
@@ -382,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
